--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<canvas id="myChart" width="400" height="400"></canvas>
+<div><a [routerLink]="'chart'">Chart</a></div>
+
+<router-outlet></router-outlet>
