--- a/src/app/mychart/mychart.component.html
+++ b/src/app/mychart/mychart.component.html
@@ -1,41 +1,21 @@
+<div class="toolbar">
+  <span *ngIf="authService.loggedInUser">
+    Bem-vindo, {{ authService.loggedInUser.name }}
+  </span>
+</div>
+
 <div class="row">
   <div class="col-lg-6">
     <h2>Bar Chart</h2>
     <canvas id="barchart"></canvas>
   </div>
-  <br />
-  <div class="col-lg-6">
-    <h2>Pie Chart</h2>
-    <canvas id="piechart"></canvas>
-  </div>
-  <div class="col-lg-6">
-    <h2>Doughnut Chart</h2>
-    <canvas id="dochart"></canvas>
-  </div>
-  <div class="col-lg-6">
-    <h2>Polar Area Chart</h2>
-    <canvas id="pochart"></canvas>
-  </div>
-  <div class="col-lg-6">
-    <h2>Radar Chart</h2>
-    <canvas id="rochart"></canvas>
-  </div>
-  <div class="col-lg-6">
-    <h2>Scatter Chart</h2>
-    <canvas id="Scattechart"></canvas>
-  </div>
 </div>
 
-polarAreachart
 
-<!-- <div class="col-lg-6">
-  <h2>Pie Chart</h2>
-  <canvas id="piechart"></canvas>
-</div>
-</div> -->
-
-<!-- <div style="width: 100%; height: 80vh">
-  <h2>Doughnut Chart</h2>
-  <canvas id="doughnutchart"></canvas>
-</div>
+<!-- <div>
+  <label for="yearSelect">Selecionar Ano:</label>
+  <select id="yearSelect" [(ngModel)]="selectedYear" (change)="filtrarPorAno()">
+    <option value="" disabled>Escolha um ano</option>
+    <option *ngFor="let year of data" [value]="year">{{ year }}</option>
+  </select>
 </div> -->
